<resources>
    <string name="app_name">Mara Fresh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_otp_verification">OtpVerification</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="please_enter_your_number"> Please enter your number below.</string>
    <string name="one_time_password"> We will send you a <b> One Time Password </b> on this mobile number.</string>
    <string name="title_activity_number_verification">NumberVerification</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_shopping">Products</string>

    <array name="categories">
        <item>1</item>
        <item>2</item>

    </array>
    <string name="title_activity_user_check_out">UserCheckOutActivity</string>
    <string name="select">Select</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>

    <!--  Home Fragment Texts  -->
    <string name="categories">Categories </string>
    <array name="area_array">
        <item>--Choose--</item>
        <item>Baringo</item>
        <item>Bomet</item>
        <item>Bungoma</item>
        <item>Busia</item>
        <item>Elgeyo Marakwet</item>
        <item>Embu</item>
        <item>Garissa</item>
        <item>Homa Bay</item>
        <item>Isiolo</item>
        <item>Kajiado</item>
        <item>Kakamega</item>
        <item>Kericho</item>
        <item>Kiambu</item>
        <item>Kilifi</item>
        <item>Kirinyaga</item>
        <item>Kisii</item>
        <item>Kisumu</item>
        <item>Kitui</item>
        <item>Kwale</item>
        <item>Laikipia</item>
        <item>Lamu</item>
        <item>Machakos</item>
        <item>Makueni</item>
        <item>Mandera</item>
        <item>Meru</item>
        <item>Migori</item>
        <item>Marsabit</item>
        <item>Mombasa</item>
        <item>Muranga</item>
        <item>Nairobi</item>
        <item>Nakuru</item>
        <item>Nandi</item>
        <item>Narok</item>
        <item>Nyamira</item>
        <item>Nyandarua</item>
        <item>Nyeri</item>
        <item>Samburu</item>
        <item>Siaya</item>
        <item>Taita Taveta</item>
        <item>Tana River</item>
        <item>Tharaka Nithi</item>
        <item>Trans Nzoia</item>
        <item>Turkana</item>
        <item>Uasin Gishu</item>
        <item>Vihiga</item>
        <item>Wajir</item>
        <item>West Pokot</item>
    </array>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="title_activity_orders">My Orders</string>
    <string name="title_activity_category">Category</string>
    <string name="title_activity_selected_category">SelectedCategory</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_create_profile">Create Profile</string>
    <array name="gender">

        <item>--Kindly Select --</item>
        <item>Male</item>
        <item>Female</item>

    </array>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="mpesa_text">Mpesa Payments</string>
    <string name="mpesa_steps0">1:Go to M-PESA on your phone.</string>
    <string name="mpesa_steps1">2:Select Lipa na Mpesa.</string>

    <string name="mpesa_steps2">3:Enter Paybill.</string>

    <string name="mpesa_steps3">4:Enter The Following Details.</string>

    <string name="mpesa_steps4">5:Amount.</string>

    <string name="business_number">Business Number.</string>

    <string name="account_number">Account Number.</string>

    <string name="amount">Amount.</string>

    <string name="mpesa_steps5">6:Enter your M-PESA PIN.</string>

    <string name="mpesa_steps6">7:You will receive a confirmation SMS from MPESA with a confirmation code.</string>

    <string name="mpesa_steps8">8:After you receive the confirmation SMS,enter your phone number and the confirmation Code below.</string>


    <string name="mpesa_steps9">9:Enter your M-Pesa pin.</string>

    <string name="enter_payment_details">Enter Payment Details.</string>

    <string name="mpesa_mobile_number">M-Pesa mobile number:</string>

    <string name="M_Pesa_confirmation_code">M-Pesa Confirmation Code.</string>
    <string name="title_activity_email_sign_up">EmailSignUp</string>
    <string name="title_activity_email_login">EmailLogin</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="title_activity_reset_password">Reset Password</string>

    <string name="edit">edit</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="title_activity_fruits">Fruits</string>
    <string name="title_activity_vegetables">Vegetables</string>
    <string name="title_activity_meat">Meat</string>
    <string name="title_activity_fruits_categories">FruitsCategories</string>
    <string name="title_activity_vegetables_categories">vegetablesCategories</string>
    <string name="title_activity_meat_categories">MeatCategories</string>
    <string name="title_activity_cereals">Cereals</string>
</resources>