<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">





    <ImageView
        app:srcCompat="@mipmap/ic_launcher"
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"


        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login here"
        android:textSize="17sp"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"/>



    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:fontFamily="@font/roboto_regular"
        android:inputType="textPassword"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />


    <ProgressBar
        android:layout_gravity="center_horizontal"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/roboto_regular"
            android:text="Login"
            android:textColor="@android:color/white" />


        <TextView
            android:layout_marginTop="@dimen/space20"
            android:id="@+id/tv_forgotpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:textStyle="bold"
            android:textColor="@color/green"
            />

        <TextView
            android:id="@+id/swipeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New User/Register"
            android:textSize="15sp"

            android:fontFamily="@font/sf_pro_display_regular"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>



    </RelativeLayout>


</LinearLayout>